# iwled-rs

./: .gitignore  Cargo.toml  LICENSE  Xargo.toml  iwled-rs.conf.example
.cargo/: config
.github/workflows/: rust.yml
etc/init.d/: iwled-rs
src/: config.rs  main.rs
src/utils/: openwrt_leds.rs
