[package]
name = "iwled-rs"
version = "0.1.0"
authors = ["deinferno <14363193+deinferno@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nl80211 = { path = "../nl80211", version = "0.0.2" }
neli = "0.4.4"
sysfs-class = "0.1.3"
numtoa = "0.2.3"
rust-ini = "0.15.3"
anyhow = "1.0.32"

[profile.release]
lto = true
panic = "abort"