[package]
name = "iwled-rs"
version = "0.1.0"
authors = ["deinferno <14363193+deinferno@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nl80211 = { branch = "master", git = "https://github.com/deinferno/nl80211.git" }
neli = "0.5.3"
sysfs-class = "0.1.3"
numtoa = "0.2.4"
rust-ini = "0.17.0"
anyhow = "1.0.44"
derive-new = "0.5.9"

[profile.release]
lto = true
panic = "abort"